Fix Title Alignment and Remove Settings

--- a/src/index.css
+++ b/src/index.css
@@ -32,9 +32,6 @@ body {
   display: flex;
   background: #f6f6f6;
   align-items: center;
-
-  
-  justify-content: space-evenly;
 }
 
 .img-container {
@@ -50,7 +47,7 @@ body {
 }
 
 .top-title {
-  /* margin-left: 13.5vw; */
+  margin-left: 15.5vw;
   font-size: 2.5vh;
   color: #7aa0b8;
   font-weight: 500;
@@ -114,7 +111,7 @@ a:active {
   grid-template-areas:
     "item item"
     "item item ";
-    /* remove line below if ui ugly in some devices */
+  /* remove line below if ui ugly in some devices */
   /* overflow: hidden;  */
   align-items: center;
   margin-top: 1vh;
